[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/res/hero_animation_player.tres" type="Animation" id=1]
[ext_resource path="res://script/hero.gd" type="Script" id=2]
[ext_resource path="res://assets/fuentes/TTF/dogica.ttf" type="DynamicFontData" id=3]

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/animation_sprite_sheet-sheet.png-9086c1aaf0326cfb162e0d9819533e86.stex"

[sub_resource type="Animation" id=43]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24 ]
}

[sub_resource type="Animation" id=5]
resource_name = "falling"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 19 ]
}

[sub_resource type="Animation" id=11]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=12]
resource_name = "run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "edge_grab"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "falling"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachine" id=25]
states/edge_grab/node = SubResource( 27 )
states/edge_grab/position = Vector2( 869, 104 )
states/falling/node = SubResource( 28 )
states/falling/position = Vector2( 478, -11 )
states/idle/node = SubResource( 29 )
states/idle/position = Vector2( 348, 104 )
states/jump/node = SubResource( 30 )
states/jump/position = Vector2( 643, 104 )
states/run/node = SubResource( 31 )
states/run/position = Vector2( 478, 225 )
transitions = [ "idle", "run", SubResource( 32 ), "run", "idle", SubResource( 33 ), "run", "jump", SubResource( 34 ), "jump", "run", SubResource( 35 ), "jump", "idle", SubResource( 36 ), "idle", "jump", SubResource( 37 ), "jump", "edge_grab", SubResource( 38 ), "edge_grab", "jump", SubResource( 39 ), "falling", "idle", SubResource( 40 ), "run", "falling", SubResource( 41 ), "jump", "falling", SubResource( 42 ) ]
start_node = "idle"
graph_offset = Vector2( 91, -41 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[sub_resource type="DynamicFont" id=44]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 6.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
jump_speed = -250
friction = 0.45

[node name="RayCast" type="Position2D" parent="."]

[node name="RayCast2D_wall" type="RayCast2D" parent="RayCast"]
position = Vector2( 0, -14 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RayCast2D_edge" type="RayCast2D" parent="RayCast"]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 4 )
hframes = 30
frame = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 43 )
anims/edge_grab = ExtResource( 1 )
anims/falling = SubResource( 5 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 11 )
anims/run = SubResource( 12 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 26 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -40.0
margin_right = 24.0
margin_bottom = -26.0
custom_colors/font_color = Color( 0.431373, 0.752941, 0.607843, 1 )
custom_fonts/font = SubResource( 44 )
text = "IDLE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
